# vine

./: .hgignore  .hgtags  LICENSE  README.md  _Launch.bat  pyproject.toml
ui/: _generate.bat  main.ui  tab.ui
vine/: __init__.py  __main__.py  main.py  settings.py
vine/assets/css/: main.min.css  palette.min.css
vine/assets/js/: palette.min.js
vine/gui/: __init__.py  main.py  tab.py
vine/gui/base/: main.py  tab.py
vine/gui/widgets/: __init__.py
vine/gui/widgets/editor/: __init__.py  action.py  editor.py  highlighter.py
vine/model/: __init__.py  article.py  document.py
