[tool.poetry]
name = "vine"
version = "0.1.0"
description = "Markdown tree-style editor."
authors = ["Jared Julien <jared.julien@nexteer.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10"
Markdown = "^3.3.7"
PySide6 = "^6.3.1"
pyenchant = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
